--- a/calculator.css
+++ b/calculator.css
@@ -16,3 +16,13 @@ button {
     max-height: 100%;
     height: 100px;
 }
+
+input[type="text"] {
+    font-size: 50px;
+    max-width: 99%;
+    width: 99%;
+    max-height: 100%;
+    height: 100px;
+    padding: auto;
+    margin: auto;
+}
